--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -25,3 +25,4 @@ For changes that are done, but not released yet, please see the UnreleasedChange
  * Maps
   * City / World
   * Wanted posters, bakery lists, book covers...
+ * Adventure mode
