--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -18,9 +18,4 @@ Done
  * Reduced the value of treasure found in houses.
  * The main streets can now be turned off in the theme generator. Themes generated in v1.10 will assume that main streets are wanted.
  * The type of wood planks and logs are randomised for each building.
-
-Planned
-
- * Investigate better distribution of building frequencies
- * Replace SplitContainer with a different control
- * Check buggy spawning of NPCs in Anvil
+ * Removed the SplitContainer control. Hopefully it will work on Linux now. Please let me know either way.
