--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,4 +1,5 @@
 #summary I use this page to keep track of changes in between versions
 #labels Featured
 
-Nothing!
+ * + Collapsed mineshaft sectios
+ * > Fixed a bug that caused Mace to die horribly when building frequencies were changed in custom themes. Thanks to drmule for letting me know about this.
