--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -3,7 +3,7 @@
 
 For changes that are done, but not released yet, please see the UnreleasedChanges page.
 
- * Option to stop districts being split up, so that massive buildings can be placed by the generator. This for drmule.
+ * Option to stop districts being split up, so that massive buildings can be placed by the generator. This is for drmule.
  * NPC xml file
  * More buildings
    * coau14's buildings
