--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -2,4 +2,5 @@
 #labels Featured
 
  * > Changed the save location for OSX. I have no way to test it, so please let me know if it works (or doesn't). Thank you to weatgtasg for helping me with this.
+ * > Updated chest rotation to Minecraft 1.3 format.
  * - Removed wood randomisation. 
