--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -3,4 +3,5 @@
 
  * > Changed the save location for OSX. I have no way to test it, so please let me know if it works (or doesn't). Thank you to weatgtasg for helping me with this.
  * > Updated chest rotation to Minecraft 1.3 format.
+ * > Fixed a bug that would cause collisions between cities when the chunk distance was lowered.
  * - Removed wood randomisation. 
