--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,7 +1,8 @@
 #summary I use this page to keep track of changes in between versions
 #labels Featured
 
+ * > Mace will now respect numeric seeds that you specify, rather than converting them to something else. Thank you to Ben and the clan for letting me know about this issue.
  * > Changed the save location for OSX. I have no way to test it, so please let me know if it works (or doesn't). Thank you to weatgtasg for helping me with this.
  * > Updated chest rotation to Minecraft 1.3 format.
- * > Fixed a bug that would cause collisions between cities when the chunk distance was lowered.
+ * > Fixed a bug that would cause collisions between cities when the chunk distance was lowered. Thank you to egamer25, drmule and KidGamerBR for letting me know about this.
  * - Removed wood randomisation. 
