--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,10 +1,4 @@
 #summary I use this page to keep track of changes in between versions
 #labels Featured
 
- * > Mace will now respect numeric seeds that you specify, rather than converting them to something else. Thank you to Ben and the clan for letting me know about this issue.
- * > Changed the save location for OSX. I have no way to test it, so please let me know if it works (or doesn't). Thank you to weatgtasg for helping me with this.
- * > Updated chest rotation to Minecraft 1.3 format.
- * > Fixed a bug that would cause collisions between cities when the chunk distance was lowered. Thank you to egamer25, drmule and KidGamerBR for letting me know about this.
- * > Street signs and lights are no longer generated when paths are excluded. Thank you to drmule for letting me know about this.
- * > Changed the way path (P) and street (S) exclusion works. P+S: Same as usual. P only: Same as usual, except there's no main streets. S only: Same as neither. Neither: No paths anywhere, which means any size of building could spawn, as long as it would fit inside the city walls.
- * - Removed wood randomisation. 
+* Nowt!
